[project]
name = "chatapp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "4616464", email = "72287461+tokyo6464@users.noreply.github.com" }
]
dependencies = [
    "uvicorn[standard]>=0.31.0",
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.35",
    "pymysql>=1.1.1",
    "cryptography>=43.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chatapp"]

[tool.black]
line-length = 79
